--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -28,3 +28,16 @@
   --ifm-color-primary-lightest: #4fddbf;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
+
+[data-theme="dark"] .navbar {
+  background-color: rgba(34, 31, 29, 0.9);
+}
+.navbar {
+  background-color: rgba(255, 255, 255, 0.9);
+}
+
+[data-theme='dark'] .footer {
+  background-color: rgba(34, 31, 29, 0.9);
+  
+}
+
