--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -15,6 +15,7 @@
   --ifm-color-primary-lightest: #3cad6e;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+  --ifm-spacing-horizontal: 2rem;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
@@ -49,7 +50,8 @@ html, body {
 main[role="main"],
 .theme-doc-markdown {
   flex: 1;
-  min-height: calc(100vh - var(--ifm-navbar-height, 60px));
+  padding-bottom: 20px;
+  /* min-height: calc(100vh - var(--ifm-navbar-height, 60px)); */
 }
 
 /* Ensure the container and content areas have proper background */
